http://jira.sakaiproject.org/jira/browse/SAK-13736  - squish the text body in messages in full message view, makes message column more readable and avoids IE cropping it.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-13736@51889 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -111,6 +111,9 @@
 	padding-top: 0;
 	padding-bottom: 0;
 }
+.messagesThreaded tbody tr td div.hierItemBlock .textPanel{
+	width: 60%;
+}
 .titleBarBorder{
 	/*create an underline under message title + metadata in view body thread view*/
 	background: #fff;
