--- a/messageforums-app/src/webapp/picker/jqModal.css
+++ b/messageforums-app/src/webapp/picker/jqModal.css
@@ -3,17 +3,17 @@
 
 /* The Window's CSS z-index value is respected (takes priority). If none is supplied,
 	the Window's z-index value will be set to 3000 by default (via jqModal.js). */
-	
+
 .jqmWindow {
     display: none;
-    
+
     position: fixed;
     top: 17%;
     left: 50%;
-    
+
     margin-left: -300px;
-    width: 600px;
-    
+    //width: 800px;
+
     background-color: #EEE;
     color: #333;
     border: 1px solid black;
