SAK-15948  more updates
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/SAK-15889@60185 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/picker/jqModal.css
+++ b/messageforums-app/src/webapp/picker/jqModal.css
@@ -12,7 +12,7 @@
     left: 50%;
 
     margin-left: -300px;
-    //width: 800px;
+    /* width: 800px;**/
 
     background-color: #EEE;
     color: #333;
