MSGCNTR-307 Allow sorting of forum threads
reverting from 2.7.x, this will go into 2.8


git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/msgcntr-2.7.x@80802 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/TableSorter.css
+++ b/messageforums-app/src/webapp/css/TableSorter.css
@@ -2,17 +2,16 @@
 .header {
 height:auto;
 padding-top:8px !important;
-cursor:pointer;
 }
 .headerSortUp {
 background: url(../images/sortascending.gif) no-repeat left;
-background-position: 85%;
+background-position: 40px;
 height:auto;
 padding-top:8px !important;
 }
 .headerSortDown {
 background: url(../images/sortdescending.gif) no-repeat left;
-background-position: 85%;
+background-position: 40px;
 height:auto;
 padding-top:8px !important;
 }
