--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -64,6 +64,7 @@
 	/*	short description whenever one occurs - do not use padding */
 	display: block;
 	margin: .5em 0;
+    font-size:.85em;
 }
 .messageNew{
 	color: #000;
