MSGCNTR-535 - layout tweaks to new checkboxes, eliminate page jump on date panel disclosure
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@95177 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -486,3 +486,10 @@ form{margin-bottom:0;}
 }
 .messageCommentBody{
 }
+.calWidget{
+    vertical-align:middle;
+}
+.calWidget img{
+     vertical-align:middle;
+     margin-right:3em
+}
