MSGCNTR-530 - if panel loads closed jquery-ui accordion malfunctions, add an autoHeight:false option and a change callback to resize the iframe.
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-528@95773 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -404,7 +404,7 @@ td div.title{
 	height: 1.75em;
 }
 .permissionRow .ui-accordion-header:hover { 
-	border: 1px solid #C03;
+	border: 1px solid #666;
 }
 .permissionRow .ui-accordion-header.ui-state-active {
 	border-radius: 4px 4px 0 0;
