MSGCNTR-552 - put forum and topic links in a disclosure panel
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@96441 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -523,3 +523,27 @@ form{margin-bottom:0;}
      vertical-align:middle;
      margin-right:3em
 }
+
+.moreMenuLink span{
+    padding-right:15px;
+    background:transparent url(../images/silk/bullet_arrow_down.png) bottom right no-repeat;
+    
+}    
+.moreMenu{
+    background:#fff;
+    list-style:none;
+    margin:0;
+    padding:0px;
+    border:1px solid #ccc;
+}
+.moreMenu li{
+    
+}
+.moreMenu li a{
+    display:block;
+    padding:5px;
+}
+.moreMenu li a:hover{
+    background:#eee;
+    text-decoration:none;
+    }
