MSGCNTR-563 - Navigation toolbar used inconsistently making navigation difficult
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98511 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -583,3 +583,6 @@ img.authorImage {
 .profile2-profile-content{
 	width: 270px !important;
 }
+.navIntraTool li span a img,.navIntraTool li {
+    vertical-align: middle;
+}
