--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -583,6 +583,11 @@ img.authorImage {
 .profile2-profile-content{
 	width: 270px !important;
 }
+.createTopicsForGroupsPanel {
+    margin-left: 3em;
+    margin-top: 0.3em;
+    display: block;
+}
 .navIntraTool li span a img,.navIntraTool li {
     vertical-align: middle;
 }
