MSGCNTR-563 - format mark all as read as the other in-page controls
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@98526 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -102,6 +102,13 @@
 	padding-left:18px;
 	background: #eee url(../images/silk/arrow_down.png) center left no-repeat;
 }
+.markAllAsRead {
+	border:1px solid #ccc;
+	padding:3px;
+	padding-left:30px;
+	background: #eee url(../images/markAsRead.gif)  5px center no-repeat;
+}
+
 .topicIcon{
 /*	display:none; 	comment to hide blue or orange speech balloons by topics in Forum list view */
 }
