MSGCNTR-492 - List bullet appearing with error messages after JSF upgrade
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@110229 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -295,6 +295,7 @@ table.messageActions td{
 }
 /*PART $ MESSAGE TYPES */
 .messageAlert{
+    list-style: none;
 	background: #FFEEEE url(../images/exclamation.gif) 5px 5px no-repeat;
 	border: 1px solid #FF5555;
 	color: #FF5555;
