MSGCNTR-794 Consolidate new message indicators for a topic within a forum
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@122412 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -86,9 +86,18 @@
 	font-size:87%;
 	font-weight:bold;
 	padding: 1px 2px;
-	margin: 5px;
+	margin-left: 5px;
 	/*	display:none; - uncomment to hide the message associated with parents of new messages*/
 }
+
+
+.childrenNewZero {
+    color: #555555;
+    font-size: 85%;
+    font-weight: normal;
+    margin-left: 5px;
+}
+
 #messNavHolder{
 	float:none;
 	display:block;
