MSGCNTR-241: Ability to move a thread to a different topic
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/branches/MSGCNTR-241@129559 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -545,6 +545,10 @@ form{margin-bottom:0;}
 }
 .messageCommentBody{
 }
+.threadMovedMsg{
+    font-size:1em;
+    color:#555555; 
+}
 .calWidget{
     vertical-align:middle;
 }
