SAK-25606 fix profile info popup to work with newer jquery plus qtip2 library
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@134270 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -602,15 +602,13 @@ img.authorImage {
     background:#eee;
     text-decoration:none;
 }
-.qtip-content{
-	max-height: 200px;
-	overflow: auto !important;
+div.msgcntr-profile-qtip {
+	max-height: 220px;
+    max-width: 640px;
+    background-color: #fff;
 }
-.profile2-profile{
-	width: 500px !important;
-}
-.profile2-profile-content{
-	width: 270px !important;
+.qtip-content .profile2-profile-content{
+	width: 270px;
 }
 .createTopicsForGroupsPanel {
     margin-left: 3em;
