SAK-26358 fix the msgcntr Customize CSS. Patch from John Ansorge
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@310442 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -418,26 +418,11 @@ td div.title{
 .permissionRow .ui-icon-triangle-1-s { background-position: -64px -16px; }
 .permissionRow .ui-icon-triangle-1-e { background-position: -32px -16px; }
 .permissionRow .ui-accordion-content { background: #eee; border: 1px solid #ccc; }
-.permissionRow .ui-accordion-header { 
-	background: #eee; 
-	border-radius: 4px;
-	cursor:pointer;
+.permissionRow span.ui-accordion-header {
 	margin-left: 4em;
-	padding: .1em .4em .1em 0;
-	border: 1px solid #ccc;
 	display:inline-block;
-	height: 1.75em;
-}
-.permissionRow .ui-accordion-header:hover { 
-	border: 1px solid #666;
 }
 .permissionRow .ui-accordion-header.ui-state-active {
-	border-radius: 4px 4px 0 0;
-	position:relative;
-	top: 1px;
-	border-bottom:none;
-}
-.permissionRow .ui-accordion-header.ui-state-active:hover {
 	border-bottom:none;
 }
 
