SAK-26609 - Contributed patch forums profile popup overflows with lots of content
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@310653 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -592,7 +592,9 @@ div.msgcntr-profile-qtip {
     background-color: #fff;
 }
 .qtip-content .profile2-profile-content{
-	width: 270px;
+    float: right;
+    overflow: auto;
+    max-height: 200px;
 }
 .createTopicsForGroupsPanel {
     margin-left: 3em;
