SAK-27874 "Mark as Read" icon does not have any accompanying text
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@312672 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-app/src/webapp/css/msgcntr.css
+++ b/messageforums-app/src/webapp/css/msgcntr.css
@@ -147,7 +147,9 @@
 .markAsReadIcon{
 	cursor: pointer;
 	margin-left:.5em;
-	background: #fff url(../images/silk/email.png) center left no-repeat
+	background: #fff url(../images/silk/email.png) center left no-repeat;
+	padding-bottom: 2px;
+	padding-top: 2px;
 }
 .markAsReadIcon:hover{
 	background: #fff url(../images/silk/email_open.png) center left no-repeat
