--- a/messageforums-app/src/webapp/css/dialog.css
+++ b/messageforums-app/src/webapp/css/dialog.css
@@ -8,6 +8,8 @@
 	border: solid 1px #525252;
 	background-color: white;
 	padding: 10px;
+	overflow-y: auto;
+	-webkit-overflow-scrolling: touch;
 }
  
 .ui-dialog-container {
